--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "axios": "^1.3.3",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "native-base": "^3.4.26",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-paper": "^5.2.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-web": "~0.18.9",
