--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "doc": "npx typedoc"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.3",
     "expo": "~47.0.12",
+    "expo-linking": "~3.3.1",
     "expo-status-bar": "~1.4.2",
     "native-base": "^3.4.26",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "^13.8.0",
     "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
@@ -31,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@expo/webpack-config": "^18.0.1",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "typedoc": "^0.24.0-beta.2",
