--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "doc": "npx typedoc"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
