--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-open-maps": "^0.4.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
