--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~47.0.12",
     "expo-linking": "~3.3.1",
     "expo-status-bar": "~1.4.2",
+    "fuzzysort": "^2.0.4",
     "native-base": "^3.4.26",
     "react": "18.1.0",
     "react-dom": "18.1.0",
