--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@ungap/structured-clone": "^1.0.2",
     "axios": "^1.3.3",
     "expo": "~47.0.12",
     "expo-linking": "~3.3.1",
