--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "serve": "^14.2.0"
+    "serve": "^14.2.0",
+    "structured-clone": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
