--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-status-bar": "~1.4.2",
     "fuzzysort": "^2.0.4",
     "native-base": "^3.4.26",
+    "prettier": "^2.8.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
