--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "expo-linking": "~3.3.1",
     "expo-status-bar": "~1.4.2",
     "fuzzysort": "^2.0.4",
+    "javascript-time-ago": "^2.5.9",
+    "moment": "^2.29.4",
     "native-base": "^3.4.26",
     "react": "18.1.0",
     "react-dom": "18.1.0",
