--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/expo__vector-icons": "^10.0.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "@types/ungap__structured-clone": "^0.3.0",
     "typedoc": "^0.24.0-beta.2",
     "typescript": "^4.6.3"
   },
