--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@ungap/structured-clone": "^1.0.2",
     "axios": "^1.3.3",
+    "chrono-node": "^2.6.2",
     "expo": "~47.0.12",
     "expo-linking": "~3.3.1",
     "expo-status-bar": "~1.4.2",
