--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fuzzysort": "^2.0.4",
     "javascript-time-ago": "^2.5.9",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "native-base": "^3.4.26",
     "react": "18.1.0",
     "react-dom": "18.1.0",
