--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-status-bar": "~1.4.2",
     "fuzzysort": "^2.0.4",
     "javascript-time-ago": "^2.5.9",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "native-base": "^3.4.26",
