--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-select-dropdown": "^3.3.2",
     "react-native-svg": "^13.8.0",
     "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4",
