--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.3",
     "chrono-node": "^2.6.2",
     "expo": "~47.0.12",
+    "expo-av": "~13.0.3",
     "expo-linking": "~3.3.1",
     "expo-status-bar": "~1.4.2",
     "fuzzysort": "^2.0.4",
