--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-av": "~13.0.3",
     "expo-linking": "~3.3.1",
     "expo-status-bar": "~1.4.2",
+    "expo-video-thumbnails": "~7.0.0",
     "fuzzysort": "^2.0.4",
     "javascript-time-ago": "^2.5.9",
     "jwt-decode": "^3.1.2",
